Fix toolbar margins and icon alignments
- Fixed the horizontal and vertical alignments of the icons used in the
  snap toolbar.

- Added the `toolbar` style class to the snap toolbar.

- Adjusted the `toolbar` style class by adding left and right margins,
  promoting a cleaner visual layout

- Removed unnecessary `margin-start` property from expandable
  MenuButtons within toolbars, preventing potential layout conflicts.

Fixes: https://gitlab.com/inkscape/inkscape/-/issues/4881,
       https://gitlab.com/inkscape/inbox/-/issues/10361

--- a/share/ui/style.css
+++ b/share/ui/style.css
@@ -760,8 +760,7 @@ button.square-button image {
 }
 
 .toolbar {
-    margin-top: 4px;
-    margin-bottom: 4px;
+    margin: 4px;
 }
 
 .toolbar > * {
